--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,3 +23,25 @@ jobs:
         with:
           name: rmkb-binary
           path: rmkb
+      - name: Create release
+        id: create_release
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Version ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+      - name: Upload release binary
+        id: upload_release
+        if: steps.create_release.outcome == 'success'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: rmkb
+          asset_name: rmkb
+          asset_content_type: application/octet-stream
