Use personal access token for release
There's some hints that the automatic token for the action doesn't
have enough permission to actually do the release.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: build
 on: [push]
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   build:
@@ -28,7 +28,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.release_token }}
         with:
           tag_name: ${{ github.ref_name }}
           release_name: Version ${{ github.ref_name }}
@@ -43,7 +43,7 @@ jobs:
         if: steps.binary_hash.outcome == 'success'
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.release_token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: rmkb
